# Vade-Finance

./: README.md  docker-compose.backend.yml  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
contracts/vade_finance/: .gitignore  Anchor.toml  devnet-config.json  package-lock.json  package.json  tsconfig.json
contracts/vade_finance/migrations/: deploy.ts
contracts/vade_finance/programs/vade_finance/: Cargo.toml
contracts/vade_finance/programs/vade_finance/src/: lib.rs
contracts/vade_finance/scripts/: bootstrap-devnet.mjs  mint-devnet-usdt.mjs
contracts/vade_finance/tests/: vade_finance.ts
docs/: BACKEND_SETUP.md  CONTRACT_FRONTEND_MAPPING.md  CONTRACT_INTERFACE.md  CONTRACT_STATE_MACHINE.md  DEVNET_DEMO_RUNBOOK.md
prisma/: schema.prisma
prisma/migrations/0001_init/: migration.sql
src/: middleware.ts  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/app/: page.tsx
src/app/docs/: page.tsx
src/components/: BrandLogo.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  SloganReveal.tsx
src/components/Dither/: Dither.css  Dither.tsx
src/components/app/: ActionSuccessModal.tsx  AppHeader.tsx  AppShell.tsx  CreateInvoiceModal.tsx  DashboardOverview.tsx  DepositModal.tsx  FundInvoiceModal.tsx  HistoryView.tsx  InvoiceDetailDrawer.tsx  MarketplaceView.tsx  MyInvoicesView.tsx  PortfolioView.tsx  RegistrationModal.tsx  RiskBadge.tsx  SettingsView.tsx  Sidebar.tsx  SolanaWalletProvider.tsx  StatusBadge.tsx  ToastStack.tsx  (+5 more)
src/lib/: app-data.ts  mockData.ts  types.ts  utils.ts  vade-client.ts  vade_finance_idl.json
(+54 files in other folders)
